<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_init" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="35.0sp" android:textStyle="bold" android:textColor="#ff33b5e5" android:gravity="center" android:id="@id/fullscreen_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="200.0dip" android:text="@string/init_server_url" android:keepScreenOn="true" />
        <ImageView android:id="@id/iv_channle_number_bg" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/yuanjiao_btn_white" android:layout_below="@id/fullscreen_content" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <EditText android:textSize="25.0sp" android:id="@id/et_server_url" android:background="@null" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="50.0dip" android:text="@string/wsrr_server_url" android:hint="@string/placeholder_server_url" android:singleLine="true" android:layout_below="@id/fullscreen_content" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <ImageView android:id="@id/iv_vend_code" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/yuanjiao_btn_white" android:layout_below="@id/iv_channle_number_bg" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <EditText android:textSize="25.0sp" android:id="@id/et_vend_code" android:background="@null" android:layout_width="300.0dip" android:layout_height="50.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="50.0dip" android:text="@string/vend_code" android:hint="@string/placeholder_vend_code" android:layout_below="@id/iv_channle_number_bg" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <Button android:textSize="30.0dip" android:id="@id/btn_save" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/btn_init_system" android:layout_below="@id/et_vend_code" android:layout_centerHorizontal="true" android:onClick="initClicked" />
        <Button android:textSize="30.0dip" android:id="@id/btn_finish" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/set_finish" android:layout_below="@id/btn_save" android:layout_centerHorizontal="true" android:onClick="finishClicked" />
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg_title" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:text="@string/PUBLIC_MSG_TITLE" android:layout_below="@id/btn_finish" />
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="40.0dip" android:maxLines="5" android:layout_toRightOf="@id/alert_msg_title" android:layout_alignTop="@id/alert_msg_title" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_image" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/image_player" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/default_init" />
    </RelativeLayout>
</RelativeLayout>