<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_top" android:layout_width="wrap_content" android:layout_height="80.0dip">
        <include android:id="@id/top" android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_alignParentTop="true" layout="@layout/top_layout" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/layout_title" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/layout_top">
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/channle_number" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/channle_number" android:maxLines="2" android:layout_alignParentLeft="true" />
        <LinearLayout android:orientation="vertical" android:background="@color/head_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_toRightOf="@id/channle_number" />
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/sku_name" android:layout_width="250.0dip" android:layout_height="fill_parent" android:text="@string/sku_name" android:maxLines="2" android:layout_toRightOf="@id/channle_number" />
        <LinearLayout android:orientation="vertical" android:background="@color/head_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_toRightOf="@id/sku_name" />
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/replenishment_number" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/replenishment_number" android:singleLine="true" android:layout_toRightOf="@id/sku_name" />
        <LinearLayout android:orientation="vertical" android:background="@color/head_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_toRightOf="@id/replenishment_number" />
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/set_difference_replenishment" android:layout_width="200.0dip" android:layout_height="fill_parent" android:text="@string/set_difference_replenishment" android:maxLines="2" android:layout_toRightOf="@id/replenishment_number" />
    </RelativeLayout>
    <ListView android:id="@id/listView" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="1.0dip" android:layout_marginBottom="10.0dip" android:listSelector="@color/head_bg" android:layout_above="@id/layout_Bottom" android:layout_below="@id/layout_title" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/layout_Bottom" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="130.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg_title" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/PUBLIC_MSG_TITLE" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="40.0dip" android:maxLines="5" android:layout_toRightOf="@id/alert_msg_title" android:layout_alignBaseline="@id/alert_msg_title" />
    </RelativeLayout>
</RelativeLayout>