<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_top" android:background="@color/head_bg" android:layout_width="fill_parent" android:layout_height="80.0dip">
        <TextView android:textSize="35.0sp" android:gravity="center_vertical" android:id="@id/tv_public_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:singleLine="true" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" />
        <ImageView android:id="@id/imageView1" android:layout_width="270.0dip" android:layout_height="46.0dip" android:layout_marginRight="30.0dip" android:src="@drawable/yuanjiao_btn_white" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <EditText android:textSize="25.0sp" android:id="@id/et_password" android:background="@null" android:focusable="false" android:layout_width="250.0dip" android:layout_height="46.0dip" android:layout_marginRight="10.0dip" android:hint="@string/placeholder_card_pwd" android:password="true" android:editable="false" android:layout_alignRight="@id/imageView1" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:id="@id/layout_title" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="2.0dip" android:layout_below="@id/layout_top">
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/sku_name" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:text="@string/sku_name" android:maxLines="2" android:layout_alignParentLeft="true" />
        <LinearLayout android:orientation="vertical" android:background="@color/head_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_alignLeft="@id/sku_number" />
        <TextView android:textSize="25.0sp" android:gravity="center" android:id="@id/sku_number" android:layout_width="120.0dip" android:layout_height="fill_parent" android:text="@string/sku_number" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ListView android:id="@id/listView" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_marginBottom="10.0dip" android:listSelector="@color/head_bg" android:layout_above="@id/layout_Bottom" android:layout_below="@id/layout_title" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/layout_Bottom" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="130.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg_title" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/PUBLIC_MSG_TITLE" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="40.0dip" android:maxLines="5" android:layout_toRightOf="@id/alert_msg_title" android:layout_alignBaseline="@id/alert_msg_title" />
    </RelativeLayout>
</RelativeLayout>