<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_top" android:layout_width="fill_parent" android:layout_height="500.0dip">
        <ImageView android:id="@id/iv_sku" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/default_home" android:scaleType="fitXY" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/layout_top">
        <ImageView android:id="@id/imageView1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip" android:src="@drawable/input_bg" android:scaleType="fitXY" android:layout_centerHorizontal="true" />
        <RelativeLayout android:orientation="vertical" android:id="@id/layout_step1" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="100.0dip" android:layout_alignLeft="@id/imageView1" android:layout_alignTop="@id/imageView1" android:layout_alignRight="@id/imageView1" android:layout_alignBottom="@id/imageView1">
            <ImageView android:gravity="center_vertical" android:id="@id/iv_step1" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/icon_channle" />
            <TextView android:textSize="30.0sp" android:id="@id/tv_channel_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:text="@string/channle_number" android:layout_toRightOf="@id/iv_step1" />
            <ImageView android:id="@id/iv_channle_number_bg" android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/yuanjiao_btn_white" android:layout_below="@id/iv_step1" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
            <EditText android:textSize="45.0sp" android:id="@id/et_channle_number" android:background="@null" android:focusable="false" android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="50.0dip" android:hint="@string/placeholder_channle_number" android:editable="false" android:layout_below="@id/iv_step1" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:id="@id/layout_step2" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="100.0dip" android:layout_alignLeft="@id/imageView1" android:layout_alignTop="@id/imageView1" android:layout_alignRight="@id/imageView1" android:layout_alignBottom="@id/imageView1">
            <ImageView android:id="@id/iv_step2" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/icon_pick" />
            <TextView android:textSize="30.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:text="@string/pick_number" android:layout_toRightOf="@id/iv_step2" />
            <ImageView android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/yuanjiao_btn_white" android:layout_below="@id/iv_step2" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
            <EditText android:textSize="45.0sp" android:id="@id/et_pick_number" android:background="@null" android:focusable="false" android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="50.0dip" android:hint="@string/placeholder_pick_number" android:editable="false" android:layout_below="@id/iv_step2" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:id="@id/layout_step3" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="100.0dip" android:layout_alignLeft="@id/imageView1" android:layout_alignTop="@id/imageView1" android:layout_alignRight="@id/imageView1" android:layout_alignBottom="@id/imageView1">
            <ImageView android:id="@id/iv_step3" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/icon_password" />
            <TextView android:textSize="30.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:text="@string/card_pwd" android:layout_toRightOf="@id/iv_step3" />
            <ImageView android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/yuanjiao_btn_white" android:layout_below="@id/iv_step3" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
            <EditText android:textSize="45.0sp" android:id="@id/et_card_password" android:background="@null" android:focusable="false" android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="50.0dip" android:hint="@string/placeholder_card_pwd" android:password="true" android:editable="false" android:layout_below="@id/iv_step3" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:id="@id/layout_step_set" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="100.0dip" android:layout_alignLeft="@id/imageView1" android:layout_alignTop="@id/imageView1" android:layout_alignRight="@id/imageView1" android:layout_alignBottom="@id/imageView1">
            <ImageView android:id="@id/iv_step_set" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/icon_password" />
            <TextView android:textSize="30.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:text="@string/card_pwd_set" android:layout_toRightOf="@id/iv_step_set" android:layout_above="@id/imageView2" />
            <ImageView android:id="@id/imageView2" android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/yuanjiao_btn_white" android:layout_below="@id/iv_step_set" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
            <EditText android:textSize="45.0sp" android:id="@id/et_card_password_set" android:background="@null" android:focusable="false" android:layout_width="300.0dip" android:layout_height="80.0dip" android:layout_marginLeft="50.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="50.0dip" android:hint="@string/placeholder_card_pwd" android:password="true" android:editable="false" android:layout_below="@id/iv_step_set" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg_title" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="200.0dip" android:text="@string/PUBLIC_MSG_TITLE" android:layout_alignLeft="@id/layout_step1" android:layout_alignTop="@id/imageView1" />
        <TextView android:textSize="25.0sp" android:id="@id/alert_msg" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="40.0dip" android:maxLines="5" android:layout_toRightOf="@id/alert_msg_title" android:layout_alignBaseline="@id/alert_msg_title" android:layout_alignRight="@id/layout_step1" android:layout_alignBottom="@id/alert_msg_title" />
        <Button android:id="@id/btn_out" android:background="@null" android:longClickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
        <Button android:id="@id/btn_version" android:background="@null" android:longClickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="版本更新" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</LinearLayout>